# sphinx-coverage-report

./: .buildinfo  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.rst  changelog.html  configuration.html  coverage.html  genindex.html  index.html  installation.html  noxfile.py  pyproject.toml  schema_violations.json  search.html
.doctrees/: environment.pickle
.github/workflows/: ci.yaml  docs.yaml
_sources/: changelog.md.txt
dev/: .buildinfo  changelog.html  configuration.html  coverage.html  genindex.html  index.html  installation.html  objects.inv  schema_violations.json  search.html
dev/.doctrees/: environment.pickle
dev/_static/: documentation_options.js
dev/directives/: coverage-function.html  coverage-module.html  coverage-package.html  coverage-report.html  coverage-results.html  index.html
directives/: coverage-function.html  coverage-module.html  coverage-package.html  coverage-report.html  coverage-results.html  index.html
docs/: changelog.rst  conf.py  configuration.rst  coverage.rst
docs/directives/: coverage-function.rst  coverage-report.rst
docs/plans/: 2026-03-26-developer-docs-design.md  2026-03-26-sphinx-docs-design.md  2026-03-29-auto-tagging-design.md
pr-preview/pr-1/: .buildinfo  (+9 more)
tests/: conftest.py  test_cobertura_parser.py  test_coverage_module.py  test_coverage_results.py  test_cr_link.py  test_json_parser.py  test_lcov_parser.py
v0.8.2/: .buildinfo  changelog.html  coverage.html  genindex.html  index.html  installation.html  objects.inv
v0.8.3/: objects.inv  schema_violations.json  search.html
v0.9.0/: .buildinfo  coverage.html  genindex.html  index.html  objects.inv  searchindex.js
(+145 files in other folders)
