[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-coverage-report"
version = "0.8.2"
description = "Sphinx extension for showing code coverage results"
readme = "README.rst"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "sphinx>4.0",
    "lxml",
    "sphinx-needs>=6.0.0",
    "packaging",
]

[project.optional-dependencies]
test = [
    "nox>=2025.2.9",
    "pytest>=7.0",
    "pytest-cov",
    "pytest-xdist",
]
docs = [
    "sphinx",
    "furo",
    "sphinx-needs>=6.0.0",
]
dev = [
    "commitizen>=3.0",
    "pre-commit>=3.0",
]

[tool.commitizen]
version_provider = "pep621"
tag_format = "v$version"
bump_message = "chore: bump version $current_version → $new_version"
annotated_tag = true

[tool.flit.module]
name = "sphinxcontrib.coverage_report"

[tool.pytest.ini_options]
testpaths = ["tests"]
